--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/heros/_hero--vertical-split.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/heros/_hero--vertical-split.scss
@@ -5,16 +5,12 @@
 
 */
 
-
 .nu_pattern--hero--vertical-split {
-
-
 	.wp-block-buttons {
 		&:last-child {
 			margin-top: $margin_2x;
 		}
 	}
-	
 
 	.wp-block-columns:first-child:last-child {
 		margin-bottom: 0;
@@ -23,53 +19,22 @@
 	p.has-36-40-font-size {
 		margin: $base-margin 0 $margin_2x 0;
 	}
-	
-    
-    
-    // ? leave the min height; but always fill vertical space
-    .wp-block-cover[style*="min-height"] {
-        height: 100% !important;
-    }
 
-
-}
-
-//
-
-.nu_pattern-is_hero--is_type_b {
-
-	border-bottom: 1px solid var(--wp--preset--color--black-3);
-	border-top: 1px solid var(--wp--preset--color--black-3);
-
-	> .wp-block-columns {
-		margin-bottom: 0;
-		&.are-vertically-aligned-center {
-			align-items: stretch;
-		}
-		@media screen and (max-width: 780px) {
-			position: relative;
-			> .wp-block-column {
-				&:last-child {
-					position: absolute;
-					top: 0;
-					left: 0;
-					width: 100%;
-					height: 100%;
-					margin: 0;
-				}
-				&:first-child {
-					position: relative;
-					z-index: 1;
-					.wp-block-group {
-						margin: $margin_4x auto;
-					}
-				}
-			}
-		}
+	// ? leave the min height; but always fill vertical space
+	.wp-block-cover[style*="min-height"] {
+		height: 100% !important;
 	}
 
-	figure {
-		margin-bottom: 0;
+
+	@include media("<=small"){
+
+		.wp-block-columns {
+			flex-flow: column-reverse;
+			> .wp-block-column:last-child {
+				margin-top: 0;
+			}
+		}
+		
 	}
 
 }
