--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/heros/_hero--video-bg.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/heros/_hero--video-bg.scss
@@ -5,19 +5,18 @@
 
 */
 
-
 .nu_pattern--hero--video-bg {
+	height: 100%;
 	.wp-block-buttons {
 		&:last-child {
 			margin-top: $margin_2x;
 		}
 	}
-	
 
 	.wp-block-columns:first-child:last-child {
 		margin-bottom: 0;
 	}
-	
+
 	p.has-36-40-font-size {
 		margin: $base-margin 0 $margin_2x 0;
 	}
