misc review updates

--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/blocks/_columns.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/blocks/_columns.scss
@@ -33,3 +33,12 @@ Columns Block
 		}
 	}
 }
+
+
+.wp-block-column {
+	> .wp-block-group {
+		&:not(:first-child){
+			margin-top: $margin_4x;
+		}
+	}
+}
