--- a/wp-content/themes/nu-start/__precomp/source/css/partials/core/src/_page-layout.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/partials/core/src/_page-layout.scss
@@ -38,7 +38,14 @@
 		}
 		> :not(.alignfull):not(.is-reusable) {
 			max-width: 90%;
-			max-width: 100%;
+		}
+		> :last-child:not(.alignfull.has-background) {
+			margin-bottom: $margin_4x;
+		}
+	}
+	@include media("<=phone") {
+		> :not(.alignfull):not(.is-reusable) {
+			max-width: calc(100% - $base-margin);
 		}
 		> :last-child:not(.alignfull.has-background) {
 			margin-bottom: $margin_4x;
@@ -48,5 +55,20 @@
 
 .block-editor-block-list__layout.is-root-container,
 .blocks--wrapper {
+	//
 	@include is_page_level_blocks_wrapper();
+
+	//
+	//
+	//
+	@include media(">=medium") {
+		> .wpforms-container-full {
+			margin-top: $margin_8x;
+		}
+	}
+	@include media("<=medium") {
+		> .wpforms-container-full {
+			margin-top: $margin_4x;
+		}
+	}
 }
