--- a/wp-content/themes/nu-start/__precomp/source/css/_overrides/src/_hotfixing.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/_overrides/src/_hotfixing.scss
@@ -108,3 +108,16 @@ body.single-nu_news {
 		}
 	}
 }
+
+
+
+h1,h2,h3,h4,h5,h6 {
+	scroll-margin-top: 124px;
+}
+
+
+.is-sticky-on-scroll {
+	position: -webkit-sticky;
+	position: sticky;
+	top: (124px + $margin_4x);
+}
