--- a/wp-content/themes/nu-start/__precomp/source/css/partials/core/src/_typography.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/partials/core/src/_typography.scss
@@ -80,6 +80,8 @@ body {
 	@include rfs(14px, --wp--preset--font-size--14-20);
 	@include rfs(12px, --wp--preset--font-size--12-16);
 
+
+	// ? manually set the line height to also scale
 	.has-12-16-font-size {
 		@include rfs(16px, line-height);
 	}
@@ -105,6 +107,7 @@ body {
 		@include rfs(40px, line-height);
 	}
 
+	// ? some of the sizes line height is just 1
 	.has-48-48-font-size,
 	.has-60-60-font-size,
 	.has-72-72-font-size,
