--- a/wp-content/themes/nu-start/__precomp/source/css/partials/frontend-only/src/_header.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/partials/frontend-only/src/_header.scss
@@ -44,7 +44,7 @@ header.header {
 		letter-spacing: 0.66px;
 		font-weight: 400;
 		font-size: var(--wp--preset--font-size--14-20);
-		padding: $base-margin;
+		padding: $half-margin $base-margin;
 		color: var(--wp--preset--color--black-2);
 		> span {
 			display: inline-block;
@@ -103,7 +103,7 @@ header.header {
 							top: 50%;
 							right: -$half-margin;
 							line-height: 1;
-							transform: translateY(-50%) rotate(90deg);
+							transform: translateY(-50%) rotate(0deg);
 							@extend %transition;
 							font-size: 18px;
 						}
@@ -114,7 +114,7 @@ header.header {
 				&:focus {
 					> a > span {
 						&::after {
-							transform: translateY(-50%) rotate(0deg);
+							transform: translateY(-50%) rotate(90deg);
 						}
 					}
 				}
@@ -246,6 +246,7 @@ header.header {
 				> a {
 					padding: 2px $base-margin;
 					height: $headerHeight;
+					@include accentUnderline();
 					// underline flyout from the right
 					&:before {
 						bottom: 0;
@@ -255,6 +256,7 @@ header.header {
 
 					&:hover,
 					&:focus {
+						background-color: initial;
 						&:before {
 							width: 100%;
 						}
