--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/blocks/_columns.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/blocks/_columns.scss
@@ -6,39 +6,25 @@ Columns Block
 
 */
 
-// ? flush generic margins away
-.wp-block-column {
-	// flush bottom edge
-	> *:last-child {
-		margin-bottom: 0;
-	}
-	// flush top edge
-	> *:first-child {
-		margin-top: 0;
-	}
-}
 
-// ? simplest A/R is just to break to 1 column early
-.wp-block-columns:not(.is-not-stacked-on-mobile) > .wp-block-column {
-	@media screen and (max-width: 781px) {
-		// general reset margins
-		&:first-child {
-			margin: 0;
+.wp-block-columns {
+
+
+
+	// 
+	// 
+	// 
+	// 
+	// 
+
+	@include media( "<=medium" ){
+
+		// first column in stack has no margin top
+		> .wp-block-column {
+			&:first-child {
+				margin-top: 0;
+			}
 		}
 
-		// multi-columns just drop to 1 here
-		&:not(:only-child) {
-			margin: $margin_2x 0 0 0;
-			flex: 1 1 100% !important;
-		}
-	}
-}
-
-
-.wp-block-column {
-	> .wp-block-group {
-		&:not(:first-child){
-			margin-top: $margin_4x;
-		}
 	}
 }
