--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/blocks/_index.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/blocks/_index.scss
@@ -2,6 +2,7 @@
 //
 @import "./buttons";
 @import "./columns";
+@import "./columns-column";
 @import "./cover";
 @import "./group";
 @import "./mediatext";
