--- a/wp-content/themes/nu-start/__precomp/source/css/partials/core/src/_typography.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/partials/core/src/_typography.scss
@@ -12,8 +12,8 @@ body {
 
 // set the RFS (max) font size, and scale it up for display style
 h1 {
-	$fz: 48px;
-	@include font-size($fz);
+	// $fz: 48px;
+	// @include font-size($fz);
 }
 
 h2 {
