--- a/wp-content/themes/nu-start/__precomp/source/css/partials/frontend-only/src/_footer.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/partials/frontend-only/src/_footer.scss
@@ -2,6 +2,12 @@
 	Site Footer
 */
 footer.site-footer {
+
+	&.disabled {
+		display: none;
+	}
+	
+	
 	// ? switch svg fill to white, or invert img
 	a.logo {
 		border-bottom: none 0;
