--- a/wp-content/themes/nu-start/__precomp/source/css/partials/frontend-only/_index.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/partials/frontend-only/_index.scss
@@ -6,3 +6,5 @@
 @import './src/site-logo';
 @import './src/widgets-as-alerts';
 @import './src/nu_global_elements';
+
+@import '../../library/required/normalize';
