--- a/wp-content/themes/nu-start/__precomp/source/css/partials/frontend-only/src/_navlinks.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/partials/frontend-only/src/_navlinks.scss
@@ -10,6 +10,7 @@
 		display: flex;
 		flex-flow: row nowrap;
 		margin: 0;
+		padding: 0;
 
 		// ? the top-level <li> is always a single row across the header
 		// ? the next level of sub-menu appears directly below
@@ -17,7 +18,6 @@
 		}
 	}
 	.sub-menu {
-		
 	}
 }
 .header {
