not sure if i wanna keep all of this or not

--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/src/_basic-page-layout.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/src/_basic-page-layout.scss
@@ -1,6 +1,22 @@
 /* 
-
+? 	page height always fills viewport using flexbox
 */
+html {
+	height: 100%;
+}
+body {
+	min-height: 100%;
+	display: flex;
+	flex-flow: column nowrap;
+	> header,
+	> footer {
+		flex: none 0;
+	}
+	> main {
+		flex: 1 0 auto;
+		margin-top: $headerHeight; // default values
+	}
+}
 
 @mixin is_page_level_blocks_wrapper() {
 	> * {
