--- a/wp-content/themes/nu-start/__precomp/source/css/_overrides/src/_hotfixing.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/_overrides/src/_hotfixing.scss
@@ -7,6 +7,8 @@
 	}
 }
 
+// ! FIX ALL OF THIS WHAT IS THIS OMG
+
 .nu_section--similar-events {
 	&:last-child:not(.has-background) {
 		margin-bottom: 0 !important;
@@ -97,12 +99,6 @@ body.single-nu_news {
 .wp-block-nu-blocks-accordion-item {
 	.wp-block-nublocks-accordion-item__content {
 		@extend %transition;
-		// opacity: 1;
-		&:not(.revealed) {
-			// opacity: 0;
-			// height: 0;
-			// @include displayedInvisible;
-		}
 	}
 }
 
@@ -134,65 +130,5 @@ figure.wp-block-embed {
 		iframe {
 			@include nu__boxshadow(4);
 		}
-	}
-}
-
-.shim-fullscreen-slider {
-	margin-top: 0 !important;
-	margin-bottom: 0 !important;
-	.slide-content {
-		min-height: 0;
-		max-height: 90vh;
-		padding: 0 !important;
-
-		>.wp-block-columns,
-		>.wp-block-video,
-		>.wp-block-video video,
-		>.wp-block-embed__wrapper,
-		>.wp-block-embed {
-			height: 100%;
-			width: 100%;
-			min-height: 100%;
-			min-width: 100%;
-		}
-		video {
-			background-color: black;
-		}
-
-		> .wp-block-columns > .wp-block-column {
-			display: flex;
-			flex-flow: column nowrap;
-			justify-content: center;
-			margin-left: 0 !important;
-		}
-
-		.wp-block-columns > .wp-block-column > .wp-block-image.size-full {
-			img,
-			& {
-				min-width: 100%;
-				height: 100%;
-			}
-		}
-
-		.shim-fixed-height-content-area {
-			margin: 0 auto;
-			max-width: 640px;
-			max-height: 90%;
-			overflow: hidden;
-			overflow-x: hidden;
-			overflow-y: auto;
-			// @include nu__boxshadow(4);
-			padding: $margin_2x;
-			> * {
-				margin-top: $margin_2x;
-			}
-			> :first-child {
-				margin-top: 0;
-			}
-		}
-	}
-	.gutenslider-divider-bottom,
-	.gutenslider-divider-top {
-		display: none;
 	}
 }
