cleaned out all the child / gutenplugin css (rebuild)
trying to DRY up the overall css in the framework bit by bit

--- a/wp-content/themes/nu-start-child/src/styles/_index.scss
+++ b/wp-content/themes/nu-start-child/src/styles/_index.scss
@@ -8,7 +8,7 @@
 
 %link_is_active {
 	span {
-		border-bottom: 2px solid $black;
+		border-bottom: 2px solid var(--wp--preset--color--black-1);
 	}
 }
 
