cleaning up to push for trev etc

--- a/wp-content/themes/nu-start/acf-blocks/breadcrumbs/breadcrumbs.css
+++ b/wp-content/themes/nu-start/acf-blocks/breadcrumbs/breadcrumbs.css
@@ -36,7 +36,8 @@ html :where(body:not(.wp-admin), .editor-styles-wrapper) {
   position: relative;
   z-index: 1;
 }
-html :where(body:not(.wp-admin), .editor-styles-wrapper) :where(p a) {
+html :where(body:not(.wp-admin), .editor-styles-wrapper) a {
+  color: currentColor;
   text-decoration: none;
 }
 
